<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7791F6"
    tools:context=".loginactivity">





    <ImageView
        android:id="@+id/imageView"
        android:layout_width="172dp"
        android:layout_height="158dp"
        android:background="#7791F6"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="235dp"
        android:layout_height="40dp"
        android:text="@string/otp_verification"
        android:textColorLink="#D51E1E"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.079" />

    <EditText
        android:id="@+id/mobileNumberID"
        android:layout_width="fill_parent"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_height="59dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_mobile_number"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.263"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.138" />

    <Button
        android:id="@+id/getcodeBtnID"


        android:layout_width="180dp"
        android:layout_height="43dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="112dp"
        android:layout_marginLeft="112dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="119dp"
        android:layout_marginRight="119dp"
        android:background="#FFFFFF"
        android:backgroundTint="@color/colorAccent"
        android:gravity="center"
        android:text="@string/get_otp"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mobileNumberID" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="247dp"
        android:layout_height="64dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/welcome_back"
        android:textColorLink="#CD1515"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/VerificationCodeID"
        android:layout_width="fill_parent"
        android:layout_height="56dp"
        android:layout_marginRight="35dp"
        android:layout_marginLeft="35dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_verification_code"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getcodeBtnID"
        app:layout_constraintVertical_bias="0.099" />

    <Button
        android:id="@+id/getcodeverificationID"

        android:layout_width="180dp"
        android:layout_height="43dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="112dp"
        android:layout_marginLeft="112dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="119dp"
        android:layout_marginRight="119dp"
        android:background="#FFFFFF"
        android:backgroundTint="@color/colorAccent"
        android:gravity="center"
        android:textAllCaps="false"
        android:textColor="@android:color/black"


        android:text="@string/verify_now"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/VerificationCodeID"
        app:layout_constraintVertical_bias="0.309" />



</androidx.constraintlayout.widget.ConstraintLayout>